--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Escaping the Illusion of Time</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Power of Initiation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Is Gold a Safe Haven Investment? Here’s What the Data Says</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 05.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>Is Gold a Safe Haven Investment? Here’s What the Data Says</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5796,7 +5796,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 05.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Escaping the Illusion of Time</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Power of Initiation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10283,7 +10283,7 @@
                         <div class="video-info">
                             <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
